[Fix] 글쓰기버튼이 header 아래에 오도록 z-index 조정

--- a/src/styles/components/_postlist.scss
+++ b/src/styles/components/_postlist.scss
@@ -95,7 +95,7 @@ a.go-post {
   position: sticky;
   bottom: 40px;
   margin-left: auto;
-  z-index: 5;
+  z-index: 1;
   background-color: $green;
   color: $white;
   box-shadow: 1px 3px 6px 0 rgba(0, 0, 0, 0.3);
