--- a/src/styles/layout/_header.scss
+++ b/src/styles/layout/_header.scss
@@ -2,7 +2,7 @@
 .main-header-wrap {
   position: sticky;
   top: 0;
-  z-index: 1;
+  z-index: 100;
 }
 
 .main-header {
